log/build_2022-08-09_13-02-37/project_2/stderr.log
  File "/home/jetson/Desktop/workspace_2/install/project_2/lib/python3.8/site-packages/project_2/slam_navigation.py", line 237
    self.rout[self.now_dot+1]-self.rout[self.now_dot])
    ^
SyntaxError: invalid syntax

